--- a/fe/src/components/Pagination/Pagination.scss
+++ b/fe/src/components/Pagination/Pagination.scss
@@ -14,6 +14,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 
   background-color: white;
   color: gray;
