--- a/fe/src/components/ProductCard/ProductCard.scss
+++ b/fe/src/components/ProductCard/ProductCard.scss
@@ -88,6 +88,6 @@
 
   &__buttons {
     display: flex;
-    justify-content: space-between;
+    gap: 8px;
   }
 }
